fix overflow text

--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -18,9 +18,6 @@
 }
 
 .markdown pre {
-  max-width: 100%;
-}
-
-.markdown code {
-  max-width: 100%;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
